grammar.js
    source_file: ($) => repeat($._pelt),

    // Comment rule
    comment: ($) => token(choice(
      seq("//", /[^\n]*/),
      seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/"),
    )),

    // Program-element (pelt)
    //
    // pelt → pragma
    //  	  →	incld
    //  	  →	mdefn
    //  	  →	idecl
    //  	  →	xdecl
    //  	  →	ldecl
    //  	  →	lconstructor
    //  	  →	cdefn
    //  	  →	wdecl
    //  	  →	ecdecl
    //  	  →	struct
    //  	  →	enumdef
    //  	  →	type_alias_declaration
    _pelt: ($) =>
      choice(
        $.pragma,
        $.incld,
        $.mdefn,
        $.idecl,
        $.xdecl,
        $.ldecl,
        $.lconstructor,
        $.cdefn,
        $.wdecl,
        $.ecdecl,
        $.struct,
        $.enumdef,
        $.type_alias_declaration,
      ),

    // Pragma rules
    //
    // pragma →	pragma id version-expr ;
    gparams: ($) => seq("<", commaSep1(field("gparam", $.generic_param)), ">"),

    // Generic-parameter (generic-param)
    //
    // generic-param → # tvar-name
    //               → tvar-name
    generic_param: ($) => choice(seq("#", $.tvar_name), $.tvar_name),

    // Import-declaration (idecl)
    //
    // idecl → import selection^opt import-name gargs^opt prefix^opt ;
    export: ($) => "export",

    // Sealed-modifier (sealed)
    //
    // sealed → sealed
    pure: ($) => "pure",

    // Export-declaration (xdecl)
    //
    // xdecl → export { id , … , id } ;^opt
    xdecl: ($) => seq("export", "{", commaSep1(field("id", $.id)), "}", optional(";")),

    // Ledger-declaration (ldecl)
    //
    // ldecl → export^opt sealed^opt ledger id : type ;
    lconstructor: ($) =>
      seq("constructor", "(", commaSep(field("parg", $.parg)), ")", field("body", $.block), optional(";")),

    // Circuit-definition (cdefn)
    //
    // cdefn → export^opt pure^opt circuit function-name gparams^opt ( parg , … , parg ) : type block
    cdefn: ($) =>
      seq(
        optional(field("export", $.export)),
        optional(field("pure", $.pure)),
        "circuit",
        field("id", $.function_name),
        optional(field("gparams", $.gparams)),
        "(",
        commaSep(field("parg", $.parg)),
        ")",
        ":",
        field("type", $.type),
        field("body", $.block),
      ),

    // Witness-declaration (wdecl)
    //
    // wdecl → export^opt witness id gparams^opt ( arg , … , arg ) : type ;
    enumdef: ($) =>
      seq(
        optional(field("export", $.export)),
        "enum",
        field("name", $.enum_name),
        "{",
        commaSep1(field("id", $.id)),
        optional(","),
        "}",
        optional(";"),
      ),

    // Type-alias-declaration (type_alias_declaration)
    //
    // type_alias_declaration → export^opt new^opt type type-name gparams^opt = type ;
    parg: ($) => seq(field("pattern", $.pattern), ":", field("type", $.type)),

    // Type (type)
    //
    // type →	tref
    //      →	Boolean
    //      →	Field
    //      →	Uint < tsize >
    //      →	Uint < tsize .. tsize >
    //      →	Bytes < tsize >
    //      →	Opaque < str >
    //      →	Vector < tsize , type >
    //      →	[ type , … , type ]
    type: ($) =>
      choice(
        $.tref,
        "Boolean",
        "Field",
        $.uint_type,
        $.bytes_type,
        $.opaque_type,
        $.vector_type,
        seq("[", commaSep($.type), "]"),
      ),

    uint_type: ($) => seq("Uint", "<", field("tsize", $.tsize), optional(seq("..", field("tsize", $.tsize))), ">"),
    bytes_type: ($) => seq("Bytes", "<", field("tsize", $.tsize), ">"),
    vector_type: ($) => seq("Vector", "<", field("tsize", $.tsize), ",", field("type", $.type), ">"),

    // Type-reference (tref)
    //
    // tref → id gargs^opt
    tsize: ($) => choice($.nat, $.id),

    // Generic-argument (garg)
    //
    // garg → nat
    //      → type
    block: ($) => seq("{", repeat(field("stmt", $.stmt)), "}"),

    // Statement (stmt)
    //
    // stmt → expr-seq ;
    //      → return expr-seq ;
    //      → return ;
    //      → if ( expr-seq ) stmt else stmt
    //      → if ( expr-seq ) stmt
    //      → for ( const id of tsize .. tsize ) stmt
    //      → for ( const id of expr-seq ) stmt
    //      → const cbinding , … , cbinding ;
    //      → block
    stmt: ($) =>
      prec.right(
        choice(
          $.expression_sequence_stmt,
          $.return_stmt,
          $.if_stmt,
          $.for_stmt,
          $.const_stmt,
          $.block,
        ),
      ),

    return_stmt: ($) => seq("return", optional(field("value", $.expr_seq)), ";"),
    if_stmt: ($) => prec.right(seq("if", "(", field("condition", $.expr_seq), ")", field("then_branch", $.stmt), optional(seq("else", field("else_branch", $.stmt))))),
    for_stmt: ($) => seq("for", "(", "const", field("counter", $.id), "of",
      choice(
        seq(field("range_start", $.tsize), "..", field("range_end", $.tsize)),
        field("limit", $.expr_seq),
      ),
      ")", field("body", $.stmt)),
    expression_sequence_stmt: ($) => seq($.expr_seq, ";"),
    const_stmt: ($) => seq("const", commaSep1($.cbinding), ";"),
    cbinding: ($) => seq(
      field("pattern", $.pattern),
      optional(seq(":", field("type", $.type))),
      "=",
      field("value", $.expr)
    ),

    // Pattern (pattern)
    //
    // pattern → id
    //        → [ pattern-tuple-elt , … , pattern-tuple-elt ]
    //        → { pattern-struct-elt , … , pattern-struct-elt }
    pattern: ($) =>
      choice(
        field("id", $.id),
        field("pattern_tuple", seq("[", optional(commaSep(field("pattern_tuple_elt", $.pattern_tuple_elt))), "]")),
        field("pattern_struct", seq("{", commaSep1(field("pattern_struct_elt", $.pattern_struct_elt)), "}")),
      ),

    // Pattern-tuple-element (pattern-tuple-elt)
    //
    // pattern-tuple-elt → (empty)
    //                   → pattern
    expr_seq: ($) =>
      choice(field("expr", $.expr), seq(field("expr", $.expr), repeat1(seq(",", field("expr", $.expr))), ",", field("expr", $.expr))),

    // Expression (expr)
    //
    // expr → expr0 ? expr : expr
    //      → assign_expr
    //      → expr0
    assign_expr: ($) => prec.right(seq(
      field("target", $._expr0),
      field("operator", choice("=", "-=", "+=")),
      field("value", $.expr)
    )),

    expr: ($) => choice($.conditional_expr, $.assign_expr, $._expr0),

    // Expression0 (expr0)
    //
    // expr0 → expr0 || expr1
    //       → expr1
    _expr0: ($) => prec.left(choice($.or_expr, $._expr1)),

    // Expression1 (expr1)
    //
    // expr1 → expr1 && expr2
    //       → expr2
    comparison_expr: ($) => seq(field("left", $._expr2), field("operator", choice($.equals, $.not_equals)), field("right", $._expr3)),
    _expr2: ($) =>
      prec.left(
        choice(
          $.comparison_expr,
          $._expr3,
        ),
      ),

    // Expression3 (expr3)
    //
    // expr3 → expr4 < expr4
    //       → expr4 <= expr4
    //       → expr4 >= expr4
    //       → expr4 > expr4
    //       → expr4
    _expr3: ($) =>
      prec.left(
        choice(
          $.rel_comparison_expr,
          $._expr4,
        ),
      ),

    // Expression4 (expr4)
    //
    // expr4 → expr4 as type
    //       → expr5
    bin_sum_expr: ($) => seq(field("left", $._expr5), field("operator", choice("+", "-")), field("right", $._expr6)),
    _expr5: ($) =>
      prec.left(
        choice(
          $.bin_sum_expr,
          $._expr6,
        ),
      ),

    // Expression6 (expr6)
    //
    // expr6 → expr6 * expr7
    //       → expr7
    bin_mul_expr: ($) => prec.left(seq(field("left", $._expr6), field("operator", "*"), field("right", $._expr7))),
    _expr6: ($) => choice($.bin_mul_expr, $._expr7),

    // Expression7 (expr7)
    //
    // expr7 → ! expr7
    //       → expr8
    _expr7: ($) => choice($.not_expr, $._expr8),

    // Expression8 (expr8)
    //
    // expr8 → expr8 [ expr ]
    //       → expr8 . id
    //       → expr8 . id ( expr , … , expr )
    //       → term
    index_access_expr: ($) => prec.left(seq(field("base", $._expr8), "[", field("index", $.expr), "]")),
    _expr8: ($) =>
      prec.left(
        choice(
          $.index_access_expr,
          $.member_access_expr,
          $.term,
        ),
      ),

    // Term (term)
    //
    // term → lit
    //      → default < type >
    //      → map ( fun , expr , …¹ , expr )
    //      → fold ( fun , expr , expr , …¹ , expr )
    //      → fun ( expr , … , expr )
    //      → disclose ( expr )
    //      → tref { struct-arg , … , struct-arg }
    //      → array_literal
    //      → bytes_literal
    //      → slice_term
    //      → assert_term
    //      → id
    //      → ( expr-seq )
    term: ($) =>
      choice(
        $.lit, // Literal (true, false, nat, str, pad)
        $.default_term, // Default value with type
        $.map_term, // Map function with one or more expressions
        $.fold_term, // Fold with initial value and list
        $.function_call_term, // Function call with zero or more expressions
        $.disclose_term, // Disclose with single expression
        $.struct_term, // Struct literal with type reference
        $.array_literal, // Array literal with optional spread elements
        $.bytes_literal, // Bytes literal
        $.slice_term, // Slice expression
        $.assert_term, // Assert expression
        $.id, // Identifier
        $.expr_seq_term, // Parenthesized expression sequence
      ),

    array_literal: ($) => seq("[", commaSep(choice(field("expr", $.expr), $.spread_element)), "]"),

    // Bytes-literal (bytes_literal)
    //
    // bytes_literal → Bytes [ expr/spread , … , expr/spread ,^opt ]
    bytes_literal: ($) => seq("Bytes", "[", commaSep(choice(field("expr", $.expr), $.spread_element)), "]"),

    // Spread-element (spread_element)
    //
    // spread_element → ... expr
    spread_element: ($) => seq("...", field("expr", $.expr)),

    // Slice-term (slice_term)
    //
    // slice_term → slice < tsize > ( expr , expr )
    slice_term: ($) => seq("slice", "<", field("size", $.tsize), ">", "(", field("value", $.expr), ",", field("index", $.expr), ")"),

    // Assert-term (assert_term)
    //
    // assert_term → assert ( expr , str )
    lit: ($) =>
      choice(
        "true",
        "false",
        $.nat,
        $.str,
        $.pad,
      ),

    equals: ($) => "==",
    id: ($) => /[$a-zA-Z_][$a-zA-Z0-9_]*/,
    function_name: ($) => /[$a-zA-Z_][$a-zA-Z0-9_]*/,
    enum_name: ($) => /[$a-zA-Z_][$a-zA-Z0-9_]*/,
    tvar_name: ($) => /[$a-zA-Z_][$a-zA-Z0-9_]*/,

    // field-literal (nat)
    //
    // a field literal is 0 or a natural number formed from a sequence
    // of digits starting with 1-9, hex (0x), octal (0o), or binary (0b)
    nat: ($) => choice("0", /[1-9][0-9]*/, /0[xX][0-9a-fA-F]+/, /0[oO][0-7]+/, /0[bB][01]+/),

    // string-literal (str, file)
    //
    // supports both double-quoted and single-quoted strings
